Create components cards, banner and view.home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,30 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+
+<div class="banner" style="background-image: url(https://prnewswire2-a.akamaihd.net/p/1893751/sp/189375100/thumbnail/entry_id/1_78upty0h/def_height/2700/def_width/2700/version/100011/type/1);">
+  <div class="banner-content">
+    <p>Awesome drinks for moms</p>
+  <!-- <a class="btn btn-secondary my-5" href="/cocktails/new">Add a new cocktail</a> -->
+  </div>
+</div>
+
+<div class="container w-70 mt-5 text-center">
+  <div class="cards">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://media1.popsugar-assets.com/files/thumbor/4w0pZ6oQ4hBHLXDg32UHi58xXDo/0x692:1456x2148/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2021/02/09/990/n/1922195/da1c462460231090db6da6.49390943_/i/mardi-gras-cocktails.jpg);">
+          <div class="card-description">
+            <h2>Nature</h2>
+          </div>
+        </div>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://a0.muscache.com/im/pictures/540b5d33-e958-4426-a8c1-584f985cf120.jpg?im_w=1200);">
+            <div class="card-description">
+              <h2>Food</h2>
+            </div>
+        </div>
+
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://media1.popsugar-assets.com/files/thumbor/4w0pZ6oQ4hBHLXDg32UHi58xXDo/0x692:1456x2148/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2021/02/09/990/n/1922195/da1c462460231090db6da6.49390943_/i/mardi-gras-cocktails.jpg);">
+            <div class="card-description">
+              <h2>Music</h2>
+            </div>
+        </div>
+      </div>
+  </div>
+</div>
