--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -7,7 +7,7 @@
   <%= f.input :max_guests, label: "Max nr. of Guests" %>
   <%= f.input :meeting_point, label: "Meeting Point" %>
   <%= f.input :policies, label: "Policies" %>
-  <%= f.input :activity_effort, as: :select, collection: Experience::ACTIVITY_EFFORTS, prompt: 'Select Activity Effort', label: false  %> %>
+  <%= f.input :activity_effort, as: :select, collection: Experience::ACTIVITY_EFFORTS, prompt: 'Select Activity Effort', label: false  %>
   
   <%= f.submit "Add my Experience",  class: 'btn btn-warning mb-5' %>
 <% end %>
