change fontawesome in show

--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -53,9 +53,9 @@
           <h6 class="no-mb">Share</h6>
 
           <div class="flex">
-            <i class="fa fa-facebook fa-2x mr-2"></i>
-            <i class="fa fa-twitter fa-2x mr-2"></i>
-            <i class="fa fa-pinterest fa-2x mr-2"></i>
+            <i class="fab fa-facebook-square fa-2x mr-2"></i>
+            <i class="fab fa-twitter-square fa-2x mr-2"></i>
+            <i class="fab fa-pinterest-square fa-2x mr-2"></i>
             <i class="fa fa-envelope fa-2x"></i>
           </div>
         </div>
