--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   margin-bottom: 30px;
   margin-top: 15px;
+  background-position: center;
 }
 .banner h1 {
   font-size: 50px;
