--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,30 +1,56 @@
-
-
-<div class="banner" style="background-image: url(https://prnewswire2-a.akamaihd.net/p/1893751/sp/189375100/thumbnail/entry_id/1_78upty0h/def_height/2700/def_width/2700/version/100011/type/1);">
+<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1527786356703-4b100091cd2c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80);">
   <div class="banner-content">
-    <p>Awesome drinks for moms</p>
   <!-- <a class="btn btn-secondary my-5" href="/cocktails/new">Add a new cocktail</a> -->
   </div>
+
+  <form class="search-input" action="/experiences">
+    <label for="location">Location</label>
+    <input id="location" type="text" name="location" placeholder="Where are you going?">
+    <label for="start-date">Start date</label>
+    <input id="start-date" type="text" name="start-date" placeholder="<%= Date.today.strftime('%F') %>">
+    <label for="end-date">End-Date</label>
+    <input id="end-date" type="text" name="end-date" placeholder="<%= (Date.today + 3).strftime('%F') %>">
+    <input type="submit" value="&#xf002" href="/experiences" class="btn search">
+  </form>
+
 </div>
 
 <div class="container w-70 mt-5 text-center">
   <div class="cards">
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://media1.popsugar-assets.com/files/thumbor/4w0pZ6oQ4hBHLXDg32UHi58xXDo/0x692:1456x2148/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2021/02/09/990/n/1922195/da1c462460231090db6da6.49390943_/i/mardi-gras-cocktails.jpg);">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=708&q=80);">
           <div class="card-description">
             <h2>Nature</h2>
           </div>
         </div>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://a0.muscache.com/im/pictures/540b5d33-e958-4426-a8c1-584f985cf120.jpg?im_w=1200);">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1589704379319-3b83010f661e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=358&q=80);">
             <div class="card-description">
               <h2>Food</h2>
             </div>
         </div>
 
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://media1.popsugar-assets.com/files/thumbor/4w0pZ6oQ4hBHLXDg32UHi58xXDo/0x692:1456x2148/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2021/02/09/990/n/1922195/da1c462460231090db6da6.49390943_/i/mardi-gras-cocktails.jpg);">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1593288926498-e756f7705db2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);">
             <div class="card-description">
               <h2>Music</h2>
             </div>
         </div>
+
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1593288926498-e756f7705db2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);">
+            <div class="card-description">
+              <h2>Art</h2>
+            </div>
+        </div>
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1465310477141-6fb93167a273?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDJ8fHNwb3J0fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">
+            <div class="card-description">
+              <h2>Sport</h2>
+            </div>
+        </div>
+
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1453473552141-5eb1510d09e2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NjB8fHdpbGR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">
+            <div class="card-description">
+              <h2>Wild</h2>
+            </div>
+        </div>
+
       </div>
   </div>
 </div>
