--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -14,7 +14,7 @@
   <div class="cards px-3">
     <% @experiences.each do |experience| %>
       <div class="card-trip">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <%= cl_image_tag experience.photo.key, height: 300, width: 400, crop: :fill %>
         <div class="card-trip-infos">
           <div>
             <h2><%= experience.title %></h2>
