Show-page almost

--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -21,3 +21,19 @@
   font-family: "Font Awesome 5 Free";
   color: white;
 }
+.price-input {
+  background-color: white;
+  padding: 25px;
+  border-radius: 32px;
+  border-color: grey;
+  padding: 25px;
+  border-radius: 15px;
+}
+.col-8 h3 {
+  font-family: Circular, sans-serif;
+  font-size: 30px;
+}
+.col-8 p {
+  font-family: Circular, sans-serif;
+  font-size: 17px;
+}
