slight style tweaks and link to new from nav bar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
 <div class="banner" style="background-image: url(https://images.unsplash.com/photo-1527786356703-4b100091cd2c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80);">
   <div class="banner-content">
   <!-- <a class="btn btn-secondary my-5" href="/cocktails/new">Add a new cocktail</a> -->
+    <h1>Experience the world with WildFlower</h1>
+    <h2>Get ready for the adventure of your life!</h2>
+  
   </div>
 
   <form class="search-input" action="/experiences">
@@ -19,7 +22,7 @@
 </div>
 
 <div class="container w-70 mt-5">
-      <h2>Experience the world</h2>
+      <h2>Discover your experience</h2>
       <h5>Unique activities with local experts—in person or online.</h5>
   <div class="cards px-0">
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=708&q=80);">
