--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
           <%= link_to "Find an experience", "/experiences", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Host an experience", "#", class: "nav-link" %>
+          <%= link_to "Host an experience", "/experiences/new", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://avatars.githubusercontent.com/u/50767684?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
