--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   color: white;
   text-align: center;
-  height: 500px;
+  height: calc(100vh - 70px);
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
@@ -9,11 +9,17 @@
   justify-content: center;
   margin-bottom: 0px;
   background-position: center;
+  position: relative;
+
+  .search-input {
+    position: absolute;
+    bottom: 30px;
+  }
 }
 .banner h1 {
   font-size: 50px;
   font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
 }
 .banner p {
   font-size: 25px;
@@ -44,7 +50,7 @@
 .banner-small h1 {
   font-size: 50px;
   font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .banner-small p {
