--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -1,7 +1,7 @@
 .search-input {
   background-color: white;
-  padding: 25px;
-  border-radius: 32px;
+  padding: 15px 21px;
+    border-radius: 49px;
 }
 
 .search-input label {
