--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,19 +1,22 @@
 <div class="banner-small" style="background-image: url(https://images.unsplash.com/photo-1523287281576-5b596107a6ae?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
   <div class="banner-content">
-    <p>What's your next adventure?</p>
+    <h1>What's your next adventure?</h1>
   </div>
 </div>
 
 <div class="container my-3">
   <form class="search-input" action="/experiences">
-      <label for="location">Location</label>
-      <input id="location" type="text" name="location" placeholder="Where are you going?">
-      <label for="start-date">Start date</label>
-      <input id="start-date" type="text" name="start-date" placeholder="<%= Date.today.strftime('%F') %>">
-      <label for="end-date">End-Date</label>
-      <input id="end-date" type="text" name="end-date" placeholder="<%= (Date.today + 3).strftime('%F') %>">
-      <input type="submit" value="&#xf002" href="/experiences" class="btn search">
-    </form>
+    <label for="location">Location</label>
+    <input id="location" type="text" name="location" placeholder="Barcelona">
+    <label for="start-date">Start-Date</label>
+    <input id="start-date" type="text" name="start-date" placeholder="<%= Date.today.strftime('%F') %>">
+    <label for="end-date">End-Date</label>
+    <input id="end-date" type="text" name="end-date" placeholder="<%= (Date.today + 3).strftime('%F') %>">
+    <button class="btn search" type="submit">
+                <i class="fa fa-search"></i>
+            </button>
+
+  </form>
     <!-- 
     <div class="container" id="filter">
       <h2>Your filters:</h2>
