added new functionality for form

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,5 +1,15 @@
 .flat-form h1 {
   font-weight: 600;
+  margin-top: 70px;
+}
+
+.form-right {
+/*background-image: url("https://res.cloudinary.com/geuxor/image/upload/v1615390682/create_form_ztadzu.png");*/
+height: 100vh;
+text-align: start;
+justify-content: start;
+align-content: flex-start;
+margin-top: 88px;
 }
 
 .location-icon {
