--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,10 +1,17 @@
-<div class="container mt-4">
+<div class="container mt-5">
   <div class="row">
     <div class="col-6 m-auto">
       <div class="flat-form">
         <h1>Add a new Experience</h1>
         <div class="mt-3">
           <%= render 'form', experience: @experience %>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="form-right"  style="background-image: url('https://res.cloudinary.com/geuxor/image/upload/v1615390682/create_form_ztadzu.png');">
+        <div class="mt-3">
+      
         </div>
       </div>
     </div>
