updated show with new style, updated new -fixed submit btn, img, rezised cols

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -10,6 +10,7 @@ text-align: start;
 justify-content: start;
 align-content: flex-start;
 margin-top: 88px;
+border-radius: 3%;
 }
 
 .location-icon {
