--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row col-12 col-md-12">
 
-  <div class="container col-12 col-md-6 m-auto">
+  <div class="container col-12 col-md-6 mr-0">
     <div class="flat-form">
       <h1>Launch a new Experience</h1>
       <div class="mt-3">
@@ -9,10 +9,8 @@
     </div>
   </div>
 
-  <div class="container col-12 col-md-4">
+  <div class="container col-12 col-md-5 mx-0">
     <div class="form-right"  style="background-image: url('https://res.cloudinary.com/geuxor/image/upload/v1615405668/rocket_tlaqkx.jpg');">
-      <div class="mt-3">
-      </div>
     </div>
   </div>
 
