--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,35 +27,35 @@
   <div class="cards px-0">
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=708&q=80);">
           <div class="card-description">
-          <a href="/experiences">Nature</a>
+          <a href="/experiences?activity=Nature">Nature</a>
           </div>
         </div>
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1589704379319-3b83010f661e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=358&q=80);">
             <div class="card-description">
-            <a href="/experiences">Food</a>
+            <a href="/experiences?activity=Food">Food</a>
             </div>
         </div>
 
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1593288926498-e756f7705db2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);">
             <div class="card-description">
-              <a href="/experiences">Music</a>
+              <a href="/experiences?activity=Music">Music</a>
             </div>
         </div>
 
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1593288926498-e756f7705db2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);">
             <div class="card-description">
-              <a href="/experiences">Art</a>
+              <a href="/experiences?activity=Art">Art</a>
             </div>
         </div>
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1465310477141-6fb93167a273?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDJ8fHNwb3J0fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">
             <div class="card-description">
-              <a href="/experiences">Sport</a>
+              <a href="/experiences?activity=Sport">Sport</a>
             </div>
         </div>
 
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1453473552141-5eb1510d09e2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NjB8fHdpbGR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">
             <div class="card-description">
-              <a href="/experiences">Wild</a>
+              <a href="/experiences?activity=Wild">Wild</a>
             </div>
         </div>
 
