--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -5,45 +5,58 @@
 </div>
 
 <div class="container my-3">
-  <form class="search-input" action="/experiences">
+  <form class="search-input" action="/experiences?activity=<%=params[:activity]%>">
+    <% if params[:activity].present? %>
+      <input type="hidden" id="activity" name="activity" value="<%=params[:activity]%>">
+   <% end %>
+    
     <label for="location">Location</label>
-    <input id="location" type="text" name="location" placeholder="Barcelona">
-    <label for="start-date">Start-Date</label>
-    <input id="start-date" type="text" name="start-date" placeholder="<%= Date.today.strftime('%F') %>">
-    <label for="end-date">End-Date</label>
-    <input id="end-date" type="text" name="end-date" placeholder="<%= (Date.today + 3).strftime('%F') %>">
+    <input id="location" type="text" name="location" placeholder="Where?">
+    <label for="start_date">Start date</label>
+    <input id="start_date" type="text" name="start_date" placeholder="<%= Date.today.strftime('%F') %>">
+    <label for="end_date">End date</label>
+    <input id="end_date" type="text" name="end_date" placeholder="<%= (Date.today + 3).strftime('%F') %>">
     <button class="btn search" type="submit">
                 <i class="fa fa-search"></i>
             </button>
 
   </form>
-    <!-- 
-    <div class="container" id="filter">
-      <h2>Your filters:</h2>
-      <h3>Location: Barcelona || Start date 03/03/2021 || Category: Sport </h3>
+
+  <% if params[:activity].present? %>
+    <div class="filter">
+      <h2><%= params[:activity].upcase %></h2>
     </div>
-  -->
-</div>
+  <% end %>
+  <% if params[:location].present? %>
+    <div class="filter">
+      <h2>Experiences in <%= params[:location].capitalize %></h2>
+    </div>
+  <% end %>
 
+  <% if @experiences.empty? %>
+    <div class="filter">
+      <h2>No experiences founded with that criteria</h2>
+    </div>
+  <% else %>
+    <div class="cards-map">
+      <div class="cards px-3">
+        <% @experiences.each do |experience| %>
+          <div class="card-trip">
+            <%= cl_image_tag experience.photo.key %>
 
-<div class="cards-map">
-  <div class="cards px-3">
-    <% @experiences.each do |experience| %>
-      <div class="card-trip">
-        <%= cl_image_tag experience.photo.key %>
-
-        <div class="card-trip-infos">
-          <div>
-            <h2><%= link_to experience.title, experience %></h2>
-            <p>Short description here! <%= experience.description.slice(0..30) %></p>
+            <div class="card-trip-infos">
+              <div>
+                <h2><%= link_to experience.title, experience %></h2>
+                <p>Short description here! <%= experience.description.slice(0..30) %></p>
+              </div>
+              <p class="card-trip-pricing">€<%= experience.price %></p>
+            </div>
           </div>
-          <p class="card-trip-pricing">€<%= experience.price %></p>
-        </div>
+        <% end %>
       </div>
-    <% end %>
-  </div>
 
-  <div id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1IjoicG9wcHlqZW5uaW5ncyIsImEiOiJja2xjZGdjdXIxZXJ1Mm9sYm0ycGRyNjJvIn0.L3m2Fuc9wxwHdOgZ6lLUkw' style="width: 100%; height: 100vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
+      <div id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1IjoicG9wcHlqZW5uaW5ncyIsImEiOiJja2xjZGdjdXIxZXJ1Mm9sYm0ycGRyNjJvIn0.L3m2Fuc9wxwHdOgZ6lLUkw' style="width: 100%; height: 100vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+    </div>
+  <% end %>
 </div>
-
