Show page with maps, cards, fonts, spacing

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
-  padding: 16px;
+  // padding: 16px;
   margin-bottom: 30px;
   flex-grow: 1;
 }
@@ -89,13 +89,8 @@
   position: relative;
 }
 
-.xp-booking-details {
 
-}
 
-.price-input {
-  
-}
 
 
 
