--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -11,3 +11,10 @@
 #filter h3 {
   font-size:small;
 }
+
+p {
+  line-height: 30px;
+  font-size: 20px;
+  font-family: Circular, sans-serif;
+  font-size: 15px;
+}
