--- a/app/views/experiences/_booking_form.html.erb
+++ b/app/views/experiences/_booking_form.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
-  <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
+  <div class="form-wrapper" style="width: 300px;">
 
 
       <form class="price-input">
         <%= simple_form_for [@experience, @booking] do |f| %>
-          <%= f.input :nr_of_people, label: "Nr. of Guests (max. #{@experience.max_guests})", input_html: { min: 1, max: @experience.max_guests } %>
+          <%= f.input :nr_of_people, label: "No of Guests (max. #{@experience.max_guests})", input_html: { min: 1, max: @experience.max_guests } %>
           <%= f.input :start_date, as: :string, input_html: {class: "datepicker"} %>
           <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-          <p>TODO total_price</p>
+          <p>Total price</p>
           <%= f.button :submit, "Book Now", class: "my-2 btn btn-warning block btn-block rounded-pill" %>
         <% end %>
-        
+
       </form>
 
   </div>
