--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -51,6 +51,7 @@ box-shadow: 2px 2px 15px black;
 
 .tag-item {
   display: inline-block;
+
 }
 
 .tag-selector {
@@ -64,15 +65,15 @@ box-shadow: 2px 2px 15px black;
   font-size: 16px;
   border-radius: 50rem;
   padding: 0.1rem 0.5rem;
-  background-color: #ECEAFF;
-  color: #7E73FF;
-  border: 1px solid #7E73FF;
+  background-color: rgb(0, 123, 255);
+  color: #FFF;
+  border: 1px solid rgba(116, 116, 116, 0.746);
   margin-right: 0.6rem;
   margin-bottom: 0.4rem;
 }
 
 .tag-selector:checked + label {
-  background-color: #7E73FF;
+  background-color: #aa1900;
   color: white;
 }
 
