--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -37,12 +37,7 @@
         <%= f.input :max_guests, label: "Max nr. of Guests", :label_html => { :class => 'form_title' } %>
       </div>
     </div>
-    <label class="btn btn-primary rounded-pill px-4 shadow">
-      Upload your photos!
-      <span style="display:none;">
-        <%= f.input :photo, as: :file, required: true, multiple: true, :label_html => { :class => 'form_title' } %>
-      </span>
-    </label>
+    <%= f.input :photo, required: true, input_html: { class: 'd-none' }, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
     <%= f.input :policies, label: "Policies",  placeholder: "outlines the guidelines and requirements when booking this experience, whats included as well as the refund policy", :label_html => { :class => 'form_title' } %>
-  <%= f.button :submit, "Add my Experience", class: "btn btn-warning btn-lg btn-block rounded-pill mb-5 shadow" %>
+    <%= f.button :submit, "Add my Experience", class: "btn btn-warning btn-lg btn-block rounded-pill mb-5 shadow" %>
 <% end %>
